style: fix navbar overflow

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -404,12 +404,12 @@ textarea.wiki-content {
 	}
 }
 .navbar {
-	width: 80%;
-	position: fixed;
+	position: sticky;
 	top: 0;
 	z-index: 1020;
 	background-color: transparent;
 	padding-top: 0;
+	margin-left: auto;
 
 	@include media-breakpoint-down(md) {
 		width: auto;
@@ -491,9 +491,8 @@ textarea.wiki-content {
 	text-align: left;
 
 	.page-content-wrapper {
-		margin: 3.5rem 2rem;
-		padding-top: 2rem;
-		padding-bottom: 0;
+		margin: 0 2rem 3.5rem;;
+		padding: 0 2rem 2rem !important;
 
 		@include media-breakpoint-down(md) {
 			margin: 0;
